--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,12 @@ spring.servlet.multipart.max-request-size=100MB
 
 #Database 접속 설정
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://Localhost:3306/miniproject?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=12345678
 
 #MyBatis
-mybatis.type-aliases-package=com.springbootstudy.bbs.domain
+mybatis.type-aliases-package=com.springbootsmini.app.domain
 mybatis.mapper-locations=classpath:mappers/**/*Mapper.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
